# polaris-v2

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  LICENSE  POLARIS_v2_Training.ipynb  POLARIS_v3_Demo.ipynb  README.md  __init__.py  benchmark.py  client.py  completion_check.py  control.html  control_v2.html  dashboard.html  dashboard_server.py  demo_recording.py  deploy_hf.py  episode_logger.py  evaluate_full.py  generate_dashboard.py  inference.py  llm_benchmark.py  main.py  mega_test_part1.py  mega_test_part2.py  models.py  nuclear_test.py  openenv.yaml  push_hf.py  pyproject.toml  requirements.txt  rl_agent.py  smoke_test.py  test_v3.py  train_grpo.py  train_trl.py  ultimate_validation.py  validation_suite.py
outputs/grpo_training/: training_results.json
server/: __init__.py  app.py  briefing_engine.py  config.py  curriculum_engine.py  drift_engine.py  event_engine.py  explainability.py  llm_minister.py  multi_agent_council.py  negotiation_protocol.py  policy_environment.py  reward_engine.py  tasks.py  transition_engine.py
static/: app.js  style.css
